# factory

./: AGENDS.md  AGENTS.md  Cargo.toml
crates/factory_app/: Cargo.toml  build.rs
crates/factory_app/src/: app.rs  audio.rs  constants.rs  lib.rs  main.rs  performance_tests.rs  plugin.rs  resources.rs  save_load.rs  simulation.rs  simulation_plugin.rs  test_performance.rs  test_support.rs  threat_events.rs  utils.rs  world_setup.rs
crates/factory_app/src/input/: build.rs  camera.rs  debug_build.rs  debug_inventory.rs  mining.rs  mod.rs  movement.rs  panels.rs  planner.rs  repair.rs  resources.rs
crates/factory_app/src/interaction/: command_feedback.rs  container_open.rs  cursor.rs  machine_kind.rs  mod.rs  slot_transfer.rs
crates/factory_app/src/map/: intelligence.rs  mod.rs  resources.rs
crates/factory_app/src/placement/: build.rs
crates/factory_app/src/plugin/: audio.rs  build.rs  construction.rs  input.rs  map.rs  mod.rs  rendering.rs  save_load.rs  simulation.rs  ui.rs
crates/factory_app/src/rendering/: belts.rs  build_preview.rs  camera.rs  colors.rs  construction.rs  day_night.rs  enemies.rs  entities.rs  manual_mining.rs  map_texture.rs  mod.rs  player.rs  resource_cells.rs  resources.rs  transforms.rs  visuals.rs  world.rs
crates/factory_app/src/save_load/: catalog.rs  compatibility.rs  container.rs  jobs.rs  types.rs
crates/factory_app/src/ui/: assembler_panel.rs  audio_settings.rs  blueprint_library.rs  build_bar.rs  build_menu.rs  container_window.rs  debug_overlay.rs  enemy_settings.rs  (+16 more)
crates/factory_app/tests/: fixed_tick.rs  save_load_ui.rs
(+280 files in other folders)
