[package]
name = "factory_app"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
factory_data.workspace = true
factory_sim.workspace = true
ron = "0.12.2"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
